# labPaoo

./: CMakeLists.txt  CafeaBase.cpp  CafeaBase.hpp  CafeaComandata.cpp  CafeaComandata.h  CafeaCopyMove.cpp  CafeaCopyMove.hpp  README.md  tema.cpp
withCopyAndMoveConstructor/: CafeaComandata.cpp  tema.cpp
